UV Stretching Area overlay fails when object has small dimensions #72236

Closed
opened 2019-12-06 16:51:58 +01:00 by Cirno · 8 comments

System Information
Operating system: Windows-8.1-6.3.9600 64 Bits
Graphics card: GeForce GT 730/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.12

Blender Version
Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-11-20 14:27, hash: 26bd5ebd42
Worked: 2.79

Short description of error
UV faces displayed as stretched when object has small dimensions

Exact steps for others to reproduce the error
This is default cube. I added some seams to it and unwrapped it
tkuWTn6.png
I set dimensions to 26cm and applied scale
2iv00Sw.png
I open UV Editing workspace an enable Area Stretching overlay. For some reason UV faces are red
RUsa5GL.png

If I export this object as fbx and open in 2.79 versions, faces there are blue.
If I set dimensions of object to 27cm in 2.81 scene, apply scale and check stretching, faces will be blue.
If I set dimensions of object lower than 26cm (10cm, 5 cm etc) and apply scale faces will be different colors from yellow to light-blue showing stretching.

Obviously in all examples above faces should be blue, as there is no stretching, all uv faces have equal scale. It worked as expected in 2.79 version

UVStretchBug.blend

**System Information** Operating system: Windows-8.1-6.3.9600 64 Bits Graphics card: GeForce GT 730/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.12 **Blender Version** Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-11-20 14:27, hash: `26bd5ebd42` Worked: 2.79 **Short description of error** UV faces displayed as stretched when object has small dimensions **Exact steps for others to reproduce the error** This is default cube. I added some seams to it and unwrapped it ![tkuWTn6.png](https://archive.blender.org/developer/F8193662/tkuWTn6.png) I set dimensions to 26cm and applied scale ![2iv00Sw.png](https://archive.blender.org/developer/F8193666/2iv00Sw.png) I open UV Editing workspace an enable Area Stretching overlay. For some reason UV faces are red ![RUsa5GL.png](https://archive.blender.org/developer/F8193670/RUsa5GL.png) If I export this object as fbx and open in 2.79 versions, faces there are blue. If I set dimensions of object to 27cm in 2.81 scene, apply scale and check stretching, faces will be blue. If I set dimensions of object lower than 26cm (10cm, 5 cm etc) and apply scale faces will be different colors from yellow to light-blue showing stretching. Obviously in all examples above faces should be blue, as there is no stretching, all uv faces have equal scale. It worked as expected in 2.79 version [UVStretchBug.blend](https://archive.blender.org/developer/F8193693/UVStretchBug.blend)
Author

Added subscriber: @Lambdadelta

Added subscriber: @Lambdadelta

Added subscriber: @Ruben-1

Added subscriber: @Ruben-1

I experience the same problem, the scale of the object seems to affect the area stretch. If you scale the UV's to be proportional to the size of the object in the scene this changes. cap.png
I tested this and it didn't happen in 2.8 either, only in 2.81 and the current 2.82 alpha.

I experience the same problem, the scale of the object seems to affect the area stretch. If you scale the UV's to be proportional to the size of the object in the scene this changes. ![cap.png](https://archive.blender.org/developer/F8201735/cap.png) I tested this and it didn't happen in 2.8 either, only in 2.81 and the current 2.82 alpha.

Added subscriber: @mano-wii

Added subscriber: @mano-wii

I can confirm. The faces should be blue.
If you move the vertice a little you realize that sometimes it shows the correct color.

I set high priority because the problem was not seen in 2.79.
I suspect the problem is in mesh_stretch_area_finish.

I can confirm. The faces should be blue. If you move the vertice a little you realize that sometimes it shows the correct color. I set high priority because the problem was not seen in 2.79. I suspect the problem is in `mesh_stretch_area_finish`.
Jeroen Bakker self-assigned this 2019-12-13 15:32:53 +01:00
Member

Also happens when object are very large. Think there is a difference during the multi object editing patch. It seems that the current implementation checks the difference between UV and local space.

Also happens when object are very large. Think there is a difference during the multi object editing patch. It seems that the current implementation checks the difference between UV and local space.

This issue was referenced by 4440739699

This issue was referenced by 4440739699bb237da8126168117e501aec770e89
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72236
No description provided.